# RayTracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  camera.cpp  color.cpp  color.h  hittable.h  hittablelist.cpp  hittablelist.h  material.cpp  ray.cpp  ray.h  sphere.h  utils.h  vec3.cpp  vec3.h
RayTracing/: CMakeLists.txt  RayTracing.cpp  camera.cpp  camera.h  color.cpp  color.h  material.h  sphere.cpp
